# fluke

./: .coverage  .dockerignore  .flake8  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  REFERENCES.md  config.json  expman.py  pyproject.toml  requirements.txt
.github/workflows/: coverage.yml  doc-publish  pypi-publish.yml
configs/: __algorithm_settings_template.json  __exp_settings_template.json  _exp_settings_femnist.json  _exp_settings_femnist.yaml  _exp_settings_mnist.json  _exp_settings_mnist.yaml  adaboostf.json  adaboostf2.json  algorithm_settings_template.json  apfl.json  apfl.yaml  ccvr.json  ccvr.yaml  clusterel.yaml  distboostf.json  ditto.json  ditto.yaml  dpfedavg.yaml  exp.yaml  exp_settings.json  exp_settings2.json  exp_settings_fedbn.json  exp_settings_femnist.json  exp_settings_mnist.json  exp_settings_pami.json  exp_settings_template.json  fat.yaml  fedadagrad.json  fedadagrad.yaml  fedadam.json  fedadam.yaml  fedala.yaml  fedamp.json  fedamp.yaml  fedavg.json  fedavg.yaml  fedavgm.json  fedavgm.yaml  fedavgmmargin.yaml  fedaws.yaml  (+59 more)
configs/cifar10/: exp_settings_fedopt.json  fedavg_article_fedopt.json  fedavg_fedopt.json
configs/cifar10 copy/: exp_settings_fedopt.json  fedavg_fedopt.json
configs/cifar100/: exp_settings_fedopt.json  fedavg_fedopt.json
configs/mnist_dir/: exp_settings_mnist.json  fedavg.json  feddisel.json  moon.json  scaffold.json
configs/yaml/: __algorithm_settings_template.yaml  __exp_settings_template.yaml  _exp_settings_femnist.yaml  _exp_settings_mnist.yaml  apfl.yaml  ccvr.yaml  ditto.yaml  fedadagrad.yaml  fedadam.yaml  fedamp.yaml  fedavg.yaml  fedavgm.yaml  fedbabu.yaml  feddyn.yaml  fedexp.yaml  fedhyperproto.yaml  fedlc.yaml  fednh.yaml  fednova.yaml  fedper.yaml  fedproto.yaml  fedprox.yaml  (+9 more)
docs/: CODE_OF_CONDUCT.md  add_algorithm.md  api_reference.md  conf.py  config_alg.md  config_data.md  config_eval.md  config_exp.md  config_log.md  configuration.md  first_run.md  fluke.algorithms.decentralized.client.md  fluke.algorithms.decentralized.md  fluke.algorithms.list.md  fluke.algorithms.md  fluke.client.md  fluke.comm.md  fluke.config.md  fluke.data.datasets.md  fluke.data.md  fluke.data.support.md  fluke.distr.client.md  fluke.distr.md  fluke.distr.server.md  fluke.distr.utils.md  fluke.evaluation.md  fluke.md  fluke.nets.md  fluke.server.md  fluke.utils.log.md  fluke.utils.md  fluke.utils.model.md  getting_started.md  helpus.md  index.md  install.md  parallel_run.md  requirements.txt  tutorials.md
fl-bench/: client.py  evaluation.py  main.py  server.py  utils.py
fl_bench/: __init__.py  channel.py  client.py  comm.py  data.py  evaluation.py  main.py  net.py  nets.py  run.py  server.py  test_data.ipynb  utils.py
fluke/: __init__.py  client.py  comm.py  config.py  evaluation.py  get.py  nets.py  repr.py  run.py  server.py  visualize.py
log/: FedProx(C=100,R=100,E=5,μ=0.1,P=0.5,seed=42)_mnist_1.json  FedProx(C=5,R=100,E=5,μ=0.1,P=0.5,seed=42)_mnist_iid.json  fedsgd_mnist_1.json  scaffold_mnist_1.json
playground/: .gitignore  centralizedSL.py  clientSL.py  serverSL.py  trying_fedavg.ipynb  trying_first_implementation.ipynb  vanillaSL.py
test/: .coverage  test_alg.py  test_client.py  test_comm.py  test_core.py  test_data.ipynb  test_data.py  test_datasets.py  test_eval.py  test_flbench.ipynb  test_fluke.ipynb  test_net.py  test_nets.py  test_server.py  test_utils.py
tests/: test_alg.py  test_client.py  test_comm.py  test_core.py  test_data.py  test_datasets.py  test_dec.py  test_eval.py  test_get.py  test_nets.py  test_run.py  test_server.py  test_utils.py
tutorials/: fluke_custom_alg.ipynb  fluke_custom_dataset.ipynb  fluke_custom_eval.ipynb  fluke_custom_nn.ipynb  fluke_new_algorithm.py  fluke_quick_api.ipynb
(+240 files in other folders)
